PP-12365 Add public auth APIs to use service_external_id and service_mode (#1423)
Add new APIs which take service ID and service mode as path parameters
- Add integration tests to cover new APIs
- Add integration tests for existing APIs where none existed previously